[FIX] GAP SECTION 2

--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,6 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    width: 100vw;
-    height: 100vh;
-    overflow-x: hidden;
 }
 
 
@@ -144,6 +141,15 @@ h1 {
     margin-top: 150px;
 }
 
+.m-0-5 {
+    margin: 0 5px;
+}
+
+
+.m-l-10 {
+    margin-left: 10px;
+}
+
 .h-1000 {
     height: 1000px;
 }
@@ -152,8 +158,8 @@ h1 {
     border: 1px solid #d2d2d5;
 }
 
-.m-r-30 {
-    margin: 0 30px 0 0;
+.m-l-30 {
+    margin: 0 0 0 30px;
 }
 
 .m-t-b-50 {
@@ -175,10 +181,10 @@ h1 {
 .card-33 h3,
 h4,
 p,
-button,
 ul {
     margin: 10px 0;
 }
+
 
 .p-10-0 {
     padding: 10px 0;
@@ -436,4 +442,8 @@ footer h3,
 footer hr {
     margin: 100px 0;
     width: 10%;
+}
+
+.m-t-100 {
+    margin-top: 100px;
 }
